修改框架信息

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -52,6 +52,10 @@ spring:
   cache:
       type: redis
       cache-names: realm-pro
+  messages:
+      basename: i18n/messages
+      encoding: utf-8
+      cache-seconds: -1
 #mybatisPlus
 mybatis:
   mapper-locations: classpath:mapper/*.xml
