--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,7 +6,7 @@ server:
 spring:
   #激活哪一个环境的配置文件
   profiles:
-    active: dev
+    active: test
   #视图配置
   mvc:
     static-path-pattern: /static/**
@@ -93,7 +93,7 @@ mybatis-plus:
 #开发环境配置
 server:
   #端口
-  port: 80
+  port: 8080
 spring:
   profiles: dev
   #redis配置
